--- a/Gestao_PetShop/src/main/resources/templates/administracao/usuario/lista-usuarios.html
+++ b/Gestao_PetShop/src/main/resources/templates/administracao/usuario/lista-usuarios.html
@@ -42,9 +42,21 @@
 					class="table table-sm table-striped table-bordered table-hover table-sm js-sticky-table">
 					<thead>
 						<tr>
-							<th scope="col" class="text-center">Login</th>
-							<th scope="col">Nome</th>
-							<th scope="col">E-mail</th>
+							<th scope="col" class="text-center">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'login', 'Login', ${usuarios})">
+								</th:block>
+							</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'nome', 'Nome', ${usuarios})">
+								</th:block>
+							</th>
+							<th scope="col">
+							<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'email', 'E-mail', ${usuarios})">
+								</th:block>
+							</th>
 							<th scope="col">permisssão</th>
 							<th scope="col">Status</th>
 							<th scope="col" class="text-center">Ações</th>
@@ -58,33 +70,58 @@
 							<td th:text="${usuario.email}">123</td>
 							<td th:text="${usuario.permissoes}">123</td>
 							<td th:text="${usuario.ativo} ? 'Ativo' : 'Inativo'">123</td>
-							<td class="text-center">
-									<a class="btn btn-primary btn-sm"
-										th:href="@{/administracao/usuarios/{id}(id=${usuario.id})}"
-										th:title="Editar"> <i class="fa fa-pencil-alt"></i>
-									</a>
-									<!-- Se usuário ativo -->
-										<a th:if="${usuario.ativo}" class="btn btn-danger btn-sm"
-										th:title="Desativar" th:href="@{/administracao/usuarios/inativar/{id}(id=${usuario.id})}"
-										th:attr="onclick='return confirm(\'Deseja realmente desativar o usuário ' 
+							<td class="text-center"><a class="btn btn-primary btn-sm"
+								th:href="@{/administracao/usuarios/{id}(id=${usuario.id})}"
+								th:title="Editar"> <i class="fa fa-pencil-alt"></i>
+							</a> <!-- Se usuário ativo --> <a th:if="${usuario.ativo}"
+								class="btn btn-danger btn-sm" th:title="Desativar"
+								th:href="@{/administracao/usuarios/inativar/{id}(id=${usuario.id})}"
+								th:attr="onclick='return confirm(\'Deseja realmente desativar o usuário ' 
 												+ ${usuario.nome} + ' ?\');'">
-										<i class="far fa-trash-alt"></i>
-									</a>
-									<!-- ELSE -->
-										<a th:unless="${usuario.ativo}" class="btn btn-warning btn-sm"
-										th:href="@{/administracao/usuarios/ativar/{id}(id=${usuario.id})}"
-										th:title="Ativar"> <i class="fas fa-user-slash"></i>
-									</a>
-							</td>
+									<i class="far fa-trash-alt"></i>
+							</a> <!-- ELSE --> <a th:unless="${usuario.ativo}"
+								class="btn btn-warning btn-sm"
+								th:href="@{/administracao/usuarios/ativar/{id}(id=${usuario.id})}"
+								th:title="Ativar"> <i class="fas fa-user-slash"></i>
+							</a></td>
+						</tr>
+						
+						<tr>
+							<td colspan="6" th:if="${#lists.isEmpty(usuarios.content)}">Nenhum usuário
+								cadastrado na base de dados!</td>
 						</tr>
 
-						<tr>
-							<td colspan="6" th:if="${usuarios.empty}">Nenhum usuário
-								cadastrado!!!</td>
-						</tr>
 					</tbody>
 				</table>
 			</div>
+			
+			<div class="col-sm-12 paginacao" th:if="${not #lists.isEmpty(usuarios.content)}">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination pagination-sm justify-content-center" th:with="paginaAtual=${usuarios.number}">
+						
+							<li th:class="${usuarios.first} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual - 1)}" aria-label="Previous">
+									<span aria-hidden="true">&laquo;</span>
+									<span class="sr-only">Previous</span>
+								</a>
+							</li>
+							<th:block th:each="p : ${#numbers.sequence(1, usuarios.totalPages)}" th:with="numeroPagina=${p - 1}">
+								
+								<li th:class="${paginaAtual == numeroPagina} ? 'page-item active'">
+									<a class="page-link" th:href="${controlePagina.urlPaginacao('page',numeroPagina)}">[[${p}]]</a>
+								</li>
+								
+							</th:block>
+							<li th:class="${usuarios.last} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual + 1)}" aria-label="Next">
+									<span aria-hidden="true">&raquo;</span>
+									<span class="sr-only">Next</span>
+								</a>
+							</li>
+					</ul>
+				</nav>
+			</div>
+			
 		</div>
 	</section>
 </body>
