--- a/Gestao_PetShop/src/main/resources/templates/animais/lista-animais.html
+++ b/Gestao_PetShop/src/main/resources/templates/animais/lista-animais.html
@@ -43,12 +43,32 @@
 					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 					<thead>
 						<tr>
-							<th scope="col">Código</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'id', 'Código', ${animais})">
+								</th:block>
+							</th>
 							<th scope="col">Foto</th>
-							<th scope="col">Nome</th>
-							<th scope="col">Raça</th>
-							<th scope="col">Espécie</th>
-							<th scope="col">Cliente</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'nome', 'Nome', ${animais})">
+								</th:block>
+							</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'raca.nome', 'Raça', ${animais})">
+								</th:block>
+							</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'raca.especie', 'Espécie', ${animais})">
+								</th:block>
+							</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'cliente.nome', 'Cliente', ${animais})">
+								</th:block>
+							</th>
 							<th scope="col">Ações</th>
 						</tr>
 					</thead>
@@ -100,12 +120,40 @@
 						</tr>
 
 						<tr>
-							<td colspan="7" th:if="${animais.empty}">Nenhum Animal
+							<td colspan="7" th:if="${#lists.isEmpty(animais.content)}">Nenhum Animal
 								cadastrado na base de dados!</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+			
+			<div class="col-sm-12 paginacao" th:if="${not #lists.isEmpty(animais.content)}">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination pagination-sm justify-content-center" th:with="paginaAtual=${animais.number}">
+						
+							<li th:class="${animais.first} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual - 1)}" aria-label="Previous">
+									<span aria-hidden="true">&laquo;</span>
+									<span class="sr-only">Previous</span>
+								</a>
+							</li>
+							<th:block th:each="p : ${#numbers.sequence(1, animais.totalPages)}" th:with="numeroPagina=${p - 1}">
+								
+								<li th:class="${paginaAtual == numeroPagina} ? 'page-item active'">
+									<a class="page-link" th:href="${controlePagina.urlPaginacao('page',numeroPagina)}">[[${p}]]</a>
+								</li>
+								
+							</th:block>
+							<li th:class="${animais.last} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual + 1)}" aria-label="Next">
+									<span aria-hidden="true">&raquo;</span>
+									<span class="sr-only">Next</span>
+								</a>
+							</li>
+					</ul>
+				</nav>
+			</div>
+			
 		</div>
 	</section>
 </body>
