--- a/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-clientes.html
+++ b/Gestao_PetShop/src/main/resources/templates/atendimento/cliente/lista-clientes.html
@@ -23,7 +23,7 @@
 		<div class="form-row col-sm-6">
 			<div class="pesquisa">
 				<form method="GET" class="form-inline"
-					action="/atendimento/clientes" th:object="${filtro}">
+					action="/atendimento/clientes/" th:object="${filtro}">
 					<div class="input-group">
 						<input class="form-control"
 							placeholder="Qual cliente você está procurando?"
@@ -43,7 +43,11 @@
 					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 					<thead>
 						<tr>
-							<th scope="col">Nome</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'nome', 'Nome', ${clientes})">
+								</th:block>
+							</th>
 							<th scope="col">CPF</th>
 							<th scope="col">Telefone</th>
 							<th scope="col">e-mail</th>
@@ -79,12 +83,38 @@
 						</tr>
 
 						<tr>
-							<td colspan="5" th:if="${clientes.empty}">Nenhum cliente
+							<td colspan="5" th:if="${#lists.isEmpty(clientes.content)}">Nenhum cliente
 								cadastrado!!</td>
 						</tr>
 
 					</tbody>
 				</table>
+			</div>
+			<div class="col-sm-12 paginacao" th:if="${not #lists.isEmpty(clientes.content)}">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination pagination-sm justify-content-center" th:with="paginaAtual=${clientes.number}">
+						
+							<li th:class="${clientes.first} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual - 1)}" aria-label="Previous">
+									<span aria-hidden="true">&laquo;</span>
+									<span class="sr-only">Previous</span>
+								</a>
+							</li>
+							<th:block th:each="p : ${#numbers.sequence(1, clientes.totalPages)}" th:with="numeroPagina=${p - 1}">
+								
+								<li th:class="${paginaAtual == numeroPagina} ? 'page-item active'">
+									<a class="page-link" th:href="${controlePagina.urlPaginacao('page',numeroPagina)}">[[${p}]]</a>
+								</li>
+								
+							</th:block>
+							<li th:class="${clientes.last} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual + 1)}" aria-label="Next">
+									<span aria-hidden="true">&raquo;</span>
+									<span class="sr-only">Next</span>
+								</a>
+							</li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 	</section>
