--- a/Gestao_PetShop/src/main/resources/templates/raca/lista-raca_especie.html
+++ b/Gestao_PetShop/src/main/resources/templates/raca/lista-raca_especie.html
@@ -39,8 +39,16 @@
 					class="table table-sm table-striped table-bordered table-hover table-condensed js-sticky-table">
 					<thead>
 						<tr>
-							<th scope="col" class="text-center">Código</th>
-							<th scope="col">Espécie</th>
+							<th scope="col" class="text-center">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'id', 'Código', ${racas})">
+								</th:block>
+							</th>
+							<th scope="col">
+								<th:block th:replace="layout/fragments/Ordenacao :: order (${controlePagina}, 
+									'nome', 'Espécie', ${racas})">
+								</th:block>
+							</th>
 							<th scope="col">Raça</th>
 							<th scope="col" class="text-center">Ações</th>
 						</tr>
@@ -58,10 +66,12 @@
 									th:onsubmit="'return confirm(\'Posso remover a raça: ' + 
 								${raca_especie.nome} + ' da base de dados?\');'"
 									th:action="@{/raca_especie/excluir/{id}(id=${raca_especie.id})}">
+										
 									<a class="btn btn-primary btn-sm"
 										th:href="@{/raca_especie/{id}(id=${raca_especie.id})}"
 										th:title="Editar"> <span class="fa fa-pencil-alt acoes"></span>
 									</a>
+				
 									<button type="submit" class="btn btn-danger btn-sm"
 										title="Excluir">
 										<span class="far fa-trash-alt acoes"></span>
@@ -71,12 +81,40 @@
 						</tr>
 
 						<tr>
-							<td colspan="4" th:if="${racas.empty}">Nenhuma Raça e Espécie
+							<td colspan="4" th:if="${#lists.isEmpty(racas.content)}">Nenhuma Raça e Espécie
 								cadastrados na base de dados!</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+						
+			<div class="col-sm-12 paginacao" th:if="${not #lists.isEmpty(racas.content)}">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination pagination-sm justify-content-center" th:with="paginaAtual=${racas.number}">
+						
+							<li th:class="${racas.first} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual - 1)}" aria-label="Previous">
+									<span aria-hidden="true">&laquo;</span>
+									<span class="sr-only">Previous</span>
+								</a>
+							</li>
+							<th:block th:each="p : ${#numbers.sequence(1, racas.totalPages)}" th:with="numeroPagina=${p - 1}">
+								
+								<li th:class="${paginaAtual == numeroPagina} ? 'page-item active'">
+									<a class="page-link" th:href="${controlePagina.urlPaginacao('page',numeroPagina)}">[[${p}]]</a>
+								</li>
+								
+							</th:block>
+							<li th:class="${racas.last} ? 'page-item disabled'">
+								<a class="page-link" th:href="${controlePagina.urlPaginacao('page',paginaAtual + 1)}" aria-label="Next">
+									<span aria-hidden="true">&raquo;</span>
+									<span class="sr-only">Next</span>
+								</a>
+							</li>
+					</ul>
+				</nav>
+			</div>
+			
 		</div>
 	</section>
 </body>
